--- a/styles.css
+++ b/styles.css
@@ -122,25 +122,26 @@ nav {
 #navbar {
   display: flex;
   width: 100%;
-  padding-top: 50px;
-  padding-bottom: 30px;
+  padding-top: 30px;
+  padding-bottom: 40px;
   padding-left: 70px;
 }
 #decade {
   position: relative;
   margin-left: 30px;
-  margin-top: 20px;
+  margin-top: 35px;
   padding-left: 10px;
-  padding-bottom: 200px;
+  padding-top: 110px;
   width: 29%;
-  height: 300px;
+  height: 270px;
   list-style: none;
   background-color: rgb(240, 248, 248);
 }
 .image1 {
-  padding-left: 32%;
-  padding-bottom: 10px;
-  position: relative;
+  padding-left: 12%;
+  padding-bottom: 20px;
+  position: absolute;
+  z-index: 1;
 }
 #decade li {
   padding-bottom: 0px;
@@ -160,6 +161,7 @@ nav {
   font: 1em sans-serif;
   line-height: 1.5em;
   padding-left: 25px;
+  padding-bottom: 10px;
   text-indent: 20px;
   text-align-last: center;
 }
@@ -183,18 +185,19 @@ nav {
 #bursaries {
   position: relative;
   margin-left: 10px;
-  margin-top: 20px;
+  margin-top: 35px;
   padding-left: 10px;
-  padding-bottom: 200px;
+  padding-bottom: 110px;
   width: 29%;
-  height: 300px;
+  height: 270px;
   list-style: none;
   background-color: rgb(240, 248, 248);
 }
 .image2 {
-  padding-left: 32%;
+  padding-left: 39.5%;
   padding-bottom: 10px;
-  position: relative;
+  position: absolute;
+  z-index: 1;
 }
 #bursaries li {
   padding-bottom: 0px;
@@ -239,18 +242,19 @@ nav {
 #scholars {
   position: relative;
   margin-left: 10px;
-  margin-top: 20px;
+  margin-top: 35px;
   padding-left: 10px;
-  padding-bottom: 200px;
+  padding-top: 110px;
   width: 29%;
-  height: 300px;
+  height: 270px;
   list-style: none;
   background-color: rgb(240, 248, 248);
 }
 .image3 {
-  padding-left: 30%;
+  padding-left: 67.5%;
   padding-bottom: 10px;
-  position: relative;
+  position: absolute;
+  z-index: 1;
 }
 #scholars li {
   padding-bottom: 0px;
