--- a/styles.css
+++ b/styles.css
@@ -187,7 +187,7 @@ nav {
   margin-left: 10px;
   margin-top: 35px;
   padding-left: 10px;
-  padding-bottom: 110px;
+  padding-top: 110px;
   width: 29%;
   height: 270px;
   list-style: none;
